@@ -1,11 +1,3 @@
-// NOTE: This module is in the demo because I started adding support
-// for the UIAction class but found that it was not fully implemented
-// at the time and now its API is going to be having big changes in
-// 2.9.2 so for now wxPython support for the class is on hold.  Just
-// ignore this module for now...
-
-
-
 /////////////////////////////////////////////////////////////////////////////
 // Name:        _uiaction.i
 // Purpose:     SWIG interface for wxUIActionSimulator
@@ -44,9 +36,11 @@ public:
     bool MouseClick(int) { return false; }
     bool MouseDblClick(int) { return false; }
     bool MouseDragDrop(long, long, long, long, int) { return false; }
-    bool KeyDown(int, bool, bool, bool) { return false; }
-    bool KeyUp(int, bool, bool, bool) { return false; }
-    bool Char(int, bool, bool, bool) { return false; }
+
+    bool KeyDown(int, int) { return false; }
+    bool KeyUp(int, int) { return false; }
+    bool Char(int, int) { return false; }
+    bool Text(const char *) { return false; }
 };
 #endif    
 %}
@@ -61,19 +55,31 @@ public:
     wxUIActionSimulator();
     ~wxUIActionSimulator();
 
-    // Mouse related
-    bool        MouseMove(long x, long y);
-    bool        MouseDown(int button = wxMOUSE_BTN_LEFT);
-    bool        MouseUp(int button = wxMOUSE_BTN_LEFT);
-    bool        MouseClick(int button = wxMOUSE_BTN_LEFT);
-    bool        MouseDblClick(int button = wxMOUSE_BTN_LEFT);
-    bool        MouseDragDrop(long x1, long y1, long x2, long y2,
+    // Mouse simulation
+    %nokwargs MouseMove;
+    bool MouseMove(long x, long y);
+    bool MouseMove(const wxPoint& point);
+    
+    bool MouseDown(int button = wxMOUSE_BTN_LEFT);
+    bool MouseUp(int button = wxMOUSE_BTN_LEFT);
+    
+    bool MouseClick(int button = wxMOUSE_BTN_LEFT);
+    bool MouseDblClick(int button = wxMOUSE_BTN_LEFT);
+    bool MouseDragDrop(long x1, long y1, long x2, long y2,
                               int button = wxMOUSE_BTN_LEFT);
 
-    // Keyboard related
-    bool        KeyDown(int keycode, bool shiftDown=false, bool cmdDown=false, bool altDown=false);
-    bool        KeyUp(int keycode, bool shiftDown=false, bool cmdDown=false, bool altDown=false);
-    bool        Char(int keycode, bool shiftDown=false, bool cmdDown=false, bool altDown=false);
+    // Keyboard simulation
+    // Low level methods for generating key presses and releases
+    bool KeyDown(int keycode, int modifiers = wxMOD_NONE);
+
+    bool KeyUp(int keycode, int modifiers = wxMOD_NONE);
+
+    // Higher level methods for generating both the key press and release for a
+    // single key or for all characters in the ASCII string "text" which can
+    // currently contain letters only (no digits, no punctuation).
+    bool Char(int keycode, int modifiers = wxMOD_NONE);
+    bool Text(const char *text);
+
 
 };
 
