@@ -50,6 +50,6 @@ MAKE_CONST_WXSTRING_NOSWIG(EmptyString);
 %include _stdpaths.i
 %include _power.i
 %include _about.i
- //%include _uiaction.i
+%include _uiaction.i
 
 //---------------------------------------------------------------------------
